# neuro-san-studio

./: .dockerignore  .env.example  .env.local.example  .flake8  .gitignore  .lycheeignore  CONTRIBUTING.md  DEPLOYMENT_QUICK_REFERENCE.md  Dockerfile  Makefile  README.md  SETUP_WITH_EXISTING_RESOURCES.md  SOLUTION_SUMMARY.md  SUPPORT.md  access-deployment.sh  architecture.md  azure-container-variables.md  azure-pipelines.yml  check_llm_configs.py  condensed AGENTS.md  conftest.py  dispatch-to-deploy.yml  docker-compose.yml  env_validator.py  hackathon.md  logging.hocon  monitor-deployment.sh  nss_local.db  pyproject.toml  pytest.ini  repo-memory.md  requirements-anthropic.txt  requirements-build.txt  requirements-google.txt  requirements.txt  run.py  run_experiment1.py  runner.log.2026-05-19  sitecustomize.py  start_all.bat  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
build_scripts/: copyright_config.json  server_start.sh  source_available_copyright.txt
cli_package/: LICENSE.txt  README.md  pyproject.toml
cli_package/neuro_san_cli/: __init__.py  main.py
cli_package/neuro_san_cli/commands/: __init__.py  init_project.py  new_agent.py  new_tool.py
cli_package/neuro_san_cli/designer_assets/coded_tools/agent_network_designer/: hocon_agent_network_assembler.py
cli_package/neuro_san_cli/designer_assets/coded_tools/agent_network_editor/: get_mcp_tool.py
cli_package/neuro_san_cli/templates/: __init__.py  agent.hocon.template  coded_tool.py.template  coded_tool_init.py.template  env.example.template  gitignore.template  hello_world.hocon.template  llm_config.hocon.template  manifest.hocon.template  readme.md.template  requirements.txt.template  run.py.template
coded_tools/: __init__.py  agent_network_html_generator.py  agent_network_validator.py  anthropic_tool.py  arxiv_rag.py  base_rag.py  brave_search.py  call_agent.py  confluence_rag.py  ddgs_search.py  (+11 more)
(+1064 files in other folders)
