# Copyright 2025-2026 Cognizant Technology Solutions Corp, www.cognizant.com.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-san-cli"
version = "0.1.0"
authors = [
    { name = "Cognizant AI Lab", email = "neuro-san@cognizant.com" }
]
description = "CLI tool for scaffolding and managing neuro-san projects"
keywords = ["neuro-san", "cli", "scaffolding", "multi-agent", "LLM"]
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
readme = "README.md"
dependencies = [
    "click>=8.0.0",
    "neuro-san>=0.5.0",
]

[project.scripts]
neuro-san = "neuro_san_cli.main:cli"

[project.urls]
Homepage = "https://github.com/cognizant-ai-lab/neuro-san-cli"
Repository = "https://github.com/cognizant-ai-lab/neuro-san-cli"
Documentation = "https://github.com/cognizant-ai-lab/neuro-san-cli#readme"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
neuro_san_cli = ["templates/*"]
